--- a/ConsoleServer/src/templates/index.html
+++ b/ConsoleServer/src/templates/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
       <label for="container">Container</label>
-      <input class="form-control" name="container" placeholder="Cloud Console container">
+      <input class="form-control" name="container" placeholder="Cloud Console Container">
     </div>
     <div class="form-group">
       <label for="id_token">Token</label>
